<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".fragments.CriarTarefaFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/h1_cadastrar"
        android:textAlignment="center"
        android:textColor="@color/titles"
        android:textSize="@dimen/titles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="287dp"
        android:layout_height="310dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEdtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/login_email"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/txt_label"

            app:endIconTint="@color/white"
            app:errorEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/medium_blue"
                android:backgroundTint="@color/medium_blue"
                android:ems="10"
                android:fontFamily="sans-serif-thin"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_label" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEdtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/login_pwd"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/txt_label"

            app:endIconTint="@color/white"
            app:errorEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/medium_blue"
                android:backgroundTint="@color/medium_blue"
                android:ems="10"
                android:fontFamily="sans-serif-thin"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_label" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEdtConfSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/conf_pwd"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/txt_label"
            app:endIconTint="@color/white"
            app:errorEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfSenha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/medium_blue"
                android:backgroundTint="@color/medium_blue"
                android:ems="10"
                android:fontFamily="sans-serif-thin"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_label" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_green"
        android:fontFamily="sans-serif-thin"
        android:text="@string/btnCadastro"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="20px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_green"
        android:fontFamily="sans-serif-thin"
        android:text="@string/btnCancelar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="20px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrar"
        app:layout_constraintVertical_bias="0.141" />

</androidx.constraintlayout.widget.ConstraintLayout>